file fixes and update on info

--- a/pablo-garcia-portfolio/src/navbarfiles/services/services.html
+++ b/pablo-garcia-portfolio/src/navbarfiles/services/services.html
@@ -12,16 +12,27 @@
         <nav>
             <ul class="menu">
                 <li><a href="/pablo-garcia-portfolio/src/index.html">Home</a></li>
-                <li><a href="/pablo-garcia-portfolio/src/navbarfiles/about/about.html">About</a></li>
+                <li><a href="/pablo-garcia-portfolio/src/navbarfiles/about/about.html">Experience</a></li>
                 <li><a href="/pablo-garcia-portfolio/src/navbarfiles/portfolio/portfolio.html">Portfolio</a></li>
-                <li><a href="/pablo-garcia-portfolio/src/navbarfiles/services/services.html">Services</a></li>
-                <li><a href="/pablo-garcia-portfolio/src/navbarfiles/contact/contact.html">Contact</a></li>
+                <li><a href="/pablo-garcia-portfolio/src/navbarfiles/services/services.html">Skills</a></li>
             </ul>
             <div class="bar">
                 <div class="bar-1"></div>
-                
+                <div class="bar-2"></div> 
+                <div class="bar-3"></div>
             </div>
         </nav>
+
+        <div class="row">
+            <div class="column">
+                <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum qui molestiae ad iusto fugit ipsa sint blanditiis ab sit quas? Cumque, vel esse vitae laudantium consequatur aliquid ab non magni!</h2>
+            </div>
+            <div class="column"><h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum qui molestiae ad iusto fugit ipsa sint blanditiis ab sit quas? Cumque, vel esse vitae laudantium consequatur aliquid ab non magni!</h2></div>
+            <div class="column"><h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum qui molestiae ad iusto fugit ipsa sint blanditiis ab sit quas? Cumque, vel esse vitae laudantium consequatur aliquid ab non magni!</h2></div>
+            <div class="column"><h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum qui molestiae ad iusto fugit ipsa sint blanditiis ab sit quas? Cumque, vel esse vitae laudantium consequatur aliquid ab non magni!</h2></div>
+          </div>
+
     </header>
+    <script src="services.js"></script>
 </body>
 </html>
