--- a/pablo-garcia-portfolio/src/navbarfiles/portfolio/portfolio.html
+++ b/pablo-garcia-portfolio/src/navbarfiles/portfolio/portfolio.html
@@ -12,16 +12,18 @@
         <nav>
             <ul class="menu">
                 <li><a href="/pablo-garcia-portfolio/src/index.html">Home</a></li>
-                <li><a href="/pablo-garcia-portfolio/src/navbarfiles/about/about.html">About</a></li>
+                <li><a href="/pablo-garcia-portfolio/src/navbarfiles/about/about.html">Experience</a></li>
                 <li><a href="/pablo-garcia-portfolio/src/navbarfiles/portfolio/portfolio.html">Portfolio</a></li>
-                <li><a href="/pablo-garcia-portfolio/src/navbarfiles/services/services.html">Services</a></li>
-                <li><a href="/pablo-garcia-portfolio/src/navbarfiles/contact/contact.html">Contact</a></li>
+                <li><a href="/pablo-garcia-portfolio/src/navbarfiles/services/services.html">Skills</a></li>
+                
             </ul>
             <div class="bar">
                 <div class="bar-1"></div>
-                
+                <div class="bar-2"></div> 
+                <div class="bar-3"></div>
             </div>
         </nav>
     </header>
+    <script src="portfolio.js"></script>
 </body>
 </html>
