updated skills sections

--- a/pablo-garcia-portfolio/src/navbarfiles/services/services.html
+++ b/pablo-garcia-portfolio/src/navbarfiles/services/services.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="services.css">
-    <title>My Services</title>
+    <title>My Skills</title>
 </head>
 <body>
     <header>
@@ -22,17 +22,100 @@
                 <div class="bar-3"></div>
             </div>
         </nav>
-
-        <div class="row">
-            <div class="column">
-                <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum qui molestiae ad iusto fugit ipsa sint blanditiis ab sit quas? Cumque, vel esse vitae laudantium consequatur aliquid ab non magni!</h2>
-            </div>
-            <div class="column"><h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum qui molestiae ad iusto fugit ipsa sint blanditiis ab sit quas? Cumque, vel esse vitae laudantium consequatur aliquid ab non magni!</h2></div>
-            <div class="column"><h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum qui molestiae ad iusto fugit ipsa sint blanditiis ab sit quas? Cumque, vel esse vitae laudantium consequatur aliquid ab non magni!</h2></div>
-            <div class="column"><h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum qui molestiae ad iusto fugit ipsa sint blanditiis ab sit quas? Cumque, vel esse vitae laudantium consequatur aliquid ab non magni!</h2></div>
-          </div>
-
-    </header>
+        <div class="wrapper">
+            <r-c class="heading-boxes">
+                <c1-1 md1-3>
+                    <h3>Proficient Programming Languages:</h3>
+                    <div>
+                        <!-- box 1 content -->
+                        <ol>
+                            <br>
+                            <p>&bull; HTML (3 Years Exp.)</p>
+                            <p>&bull; XML (3 Years Exp.)</p>
+                            <p>&bull; CSS (3 Years Exp.)</p>
+                            <p>&bull; Bootstrap (3 Years Exp.)</p>
+                            <p>&bull; Javascript (3 Years Exp.)</p>
+                            <p>&bull; Node.JS (3 Years Exp.)</p>
+                            <p>&bull; React.JS (3 Years Exp.)</p>
+                            <p>&bull; Python (2 Years Exp.)</p>
+                            <p>&bull; Django (2 Years Exp.)</p>
+                            <p>&bull; Sanity IO (2 Years Exp.)</p>
+                            <p>&bull; SQL (3 Years Exp.)</p>
+                            <p>&bull; MySQL (3 Years Exp.)</p>
+                            <p>&bull; MongoDB (3 Years Exp.)</p>
+                            <p>&bull; GitHub (3 Years Exp.)</p>
+                            <p>&bull; WordPress (5 Years Exp.)</p>
+                            <p>&bull; Elementor (3 Years Exp.)</p>
+                            <br>
+                        </ol>
+                    </div>
+                </c1-1>
+                <c1-1 md1-3>
+                    <h3>Editing Environments /IDEs /Operating Systems: </h3>
+                    <div>
+                        <!-- box 2 content -->
+                        <ol>
+                            <br>
+                            <p>&bull; VScode (3 Years Exp.)</p>
+                            <p>&bull; PyCharm (3 Years Exp.)</p>
+                            <p>&bull; MacOS (5 Years Exp.)</p>
+                            <p>&bull; Windows (5 Years Exp.)</p>
+                            <p>&bull; PyCharm (3 Years Exp.)</p>
+                            <p>&bull; Word Excel (5 Years Exp.)</p>
+                            <p>&bull; Microsoft Office Suite (5 Years Exp.)</p>
+                            <br>
+                        </ol>
+                    </div>
+                </c1-1>
+                <c1-1 md1-3>
+                    <h3>Objective Related Skills:</h3>
+                    <div>
+                        <!-- box 3 content -->
+                        <ol>
+                            <br>
+                            <p>&bull; (OOP) Object Oriented Programming (3 Years Exp.)</p>
+                            <p>&bull; (SDLC) Software Development Life Cycle (3 Years Exp.)</p>
+                            <p>&bull; Code Reviewing & Debugging (3 Years Exp.)</p>
+                            <p>&bull; Project Objective Parsing (3 Years Exp.)</p>
+                            <p>&bull; (SEO) Search Engine Optimization (1 Years Exp.)</p>
+                            <br>
+                        </ol>
+                    </div>
+                </c1-1>
+                <c1-1 md1-3>
+                    <h3>Other Hard Skills: </h3>
+                    <div>
+                        <!-- box 2 content -->
+                        <ol>
+                            <br>
+                            <p>&bull; Time Management</p>
+                            <p>&bull; Multilingual (English, Spanish, Japanese)</p>
+                            <p>&bull; Problem Solving</p>
+                            <br>
+                        </ol>
+                    </div>
+                </c1-1>
+                <c1-1 md1-3>
+                    <h3>Soft Skills: </h3>
+                    <div>
+                        <!-- box 2 content -->
+                        <ol>
+                            <br>
+                            <p>&bull; Leadership</p>
+                            <p>&bull; Excellent Communication</p>
+                            <p>&bull; Negotiation</p>
+                            <p>&bull; Adaptability</p>
+                            <p>&bull; Interpersonal Skills</p>
+                            <p>&bull; Willingness To Learn</p>
+                            <p>&bull; Accountibility</p>
+                            <p>&bull; Creativity</p>
+                            <br>
+                        </ol>
+                    </div>
+                </c1-1>
+                <c1-1 md1-3>
+            </r-c>
+        </header>
     <script src="services.js"></script>
 </body>
 </html>
