--- a/pablo-garcia-portfolio/src/navbarfiles/portfolio/portfolio.html
+++ b/pablo-garcia-portfolio/src/navbarfiles/portfolio/portfolio.html
@@ -12,10 +12,10 @@
         <nav>
             <ul class="menu">
                 <li><a href="/pablo-garcia-portfolio/src/index.html">Home</a></li>
-                <li><a href="/pablo-garcia-portfolio/src/navbarfiles/about/about.html">Experience</a></li>
+                <li><a href="/pablo-garcia-portfolio/src/navbarfiles/about/about.html">Exp</a></li>
                 <li><a href="/pablo-garcia-portfolio/src/navbarfiles/portfolio/portfolio.html">Portfolio</a></li>
                 <li><a href="/pablo-garcia-portfolio/src/navbarfiles/services/services.html">Skills</a></li>
-                
+
             </ul>
             <div class="bar">
                 <div class="bar-1"></div>
